--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -21,4 +21,4 @@ test:
 # instead read values from the environment.
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
-  api_url: "https://my-api-content.herokuapp.com/api"
+  api_url: "https://parse-content-api.herokuapp.com/api"
